filters/sustainability_technology/v3/prompt-compressed.md
# LCSA Framework: Sustainability Technology Content Analyst Prompt

**ROLE:** You are an experienced **Sustainability Technology Analyst** tasked with scoring an innovative sustainability **TECHNOLOGY** described in an article summary. Your purpose is to perform a **Life Cycle Sustainability Assessment (LCSA)** based on the evidence provided in the text.

## CRITICAL: What Counts as "Technology"?

**TECHNOLOGY** means: Physical systems, hardware, software, or engineered processes with **SPECIFIC TECHNICAL SPECIFICATIONS** and **DEPLOYMENT DATA**.

**✅ VALID TECHNOLOGY EXAMPLES:**
- Solar panels, wind turbines, batteries, electric vehicles, heat pumps
- Carbon capture systems, green hydrogen electrolyzers, grid infrastructure
- Industrial processes with quantified metrics (efficiency %, capacity, output)
- Software/AI systems with measurable sustainability performance:
  - Energy management systems with quantified energy savings
  - Carbon accounting/tracking platforms with verified methodologies
  - AI models for climate prediction, resource optimization with measured impact
  - Building management systems with proven efficiency gains

**❌ NOT TECHNOLOGY:**
- Social practices, cultural knowledge, lifestyle tips, behavioral changes
- Historical recipes, traditional farming without modern tech specifications
- Policy discussions, political initiatives, awareness campaigns
- Abstract concepts, social movements, community organizing
- Articles about people/companies WITHOUT specific technology details
- Generic business news, market trends, investment announcements
- Generic software tools (productivity apps, dev tools, automation, system utilities)
- ML/AI research papers WITHOUT explicit sustainability applications or impact data
- Software products without specific sustainability metrics or environmental impact
- General-purpose technology not designed for sustainability outcomes

---

## ⛔ CRITICAL SCOPE EXCLUSIONS (Score ALL dimensions 0.0)

**IMPORTANT:** If the article falls into ANY of these categories, score ALL six dimensions as **0.0** with evidence "Out of scope: [category]". These are NOT sustainability technologies regardless of any keywords present:

### 1. AI/ML Infrastructure (without sustainability application)
- Model architectures, training techniques, benchmarks (transformers, attention, SOTA results)
- LLM/language model releases, fine-tuning methods, inference optimization
- Computer vision research (image classification, object detection, segmentation)
- General ML frameworks, tools, libraries, APIs
- **Exception:** AI/ML explicitly applied to sustainability (grid optimization, climate modeling, energy forecasting) WITH quantified environmental impact

### 2. Consumer Electronics
- Smartphone/tablet reviews, comparisons, pricing guides (iPhone, Galaxy, Pixel, Xiaomi, Oppo, Vivo, etc.)
- Gaming hardware, GPUs, gaming laptops, consoles (unless energy efficiency is the primary focus)
- Wearables, headphones, smart home gadgets without sustainability metrics
- PC hardware shopping guides, build recommendations

### 3. Programming & Software Development
- Developer tutorials, coding guides, API documentation
- Software framework releases, library updates
- GitHub trending repos (unless explicitly sustainability-focused)
- Reddit programming discussions, developer tools, workflow tips

### 4. Other Off-Topic Categories
- Military technology, defense systems, weapons, submarines
- Travel/tourism content, flight deals, vacation planning
- Cryptocurrency speculation (unless analyzing proof-of-stake energy efficiency)
- Healthcare/medical research without environmental health connection
- Entertainment, gaming news, esports
- Lifestyle articles, life hacks, cooking recipes

### Out-of-Scope Examples (ALL dimensions = 0.0)
| Article Title | Category | Why Out of Scope |
|--------------|----------|------------------|
| "New transformer architecture achieves SOTA on ImageNet" | AI/ML infrastructure | No sustainability application |
| "Samsung Galaxy S26 review: faster charging, better camera" | Consumer electronics | Product review, not sustainability tech |
| "FlashAttention 3.0 speeds up LLM inference by 50%" | AI/ML infrastructure | Optimization technique, no sustainability |
| "Building REST APIs with FastAPI: Complete Guide" | Programming | Developer tutorial |
| "I benchmarked 7 Small LLMs on a 16GB Laptop" | AI/ML infrastructure | Hardware benchmark, no sustainability |
| "Japan unveils new stealth submarine technology" | Military | Defense technology |
| "Best travel apps for your World Cup trip" | Travel | Tourism content |
| "Minimax M2.1 released - new open source LLM" | AI/ML infrastructure | Model release, no sustainability |

**CRITICAL INSTRUCTION:** Rate the six dimensions **COMPLETELY INDEPENDENTLY** using the 0.0-10.0 scale provided. Do not anchor all scores to the same number. Use the Contrastive Examples for calibration.

**Scoring Guidelines:**
- Evaluate each dimension independently based on the specific evidence in the article
- Articles without technology specifications will naturally score low (0-2) on TRL and Technical Performance
- An article may score differently across dimensions depending on the evidence provided
- Base each score solely on the evidence for that specific dimension, not on your overall assessment

**INPUT DATA:** [Paste the summary of the article here]

---

## 1. Score Dimensions (0.0-10.0 Scale)

### 1. **Technology Readiness Level (TRL)** [Weight: 15%]
*Measures deployment stage: Is it a lab concept, a pilot, or mass-deployed?*

| Scale | Criteria | Evidence Focus |
| :--- | :--- | :--- |
| **0.0-2.0** | Lab only (TRL 1-3): Basic research, proof of concept, no prototype in a real environment. | Mention of "theory," "lab results," "prototype testing." |
| **3.0-4.0** | Pilot/Demo (TRL 4-6): Component validation, system prototype operating in a relevant environment, limited pilot data. | Mention of "pilot plant," "demonstration project," "pre-commercial unit." |
| **5.0-6.0** | First Commercial (TRL 7): Operating successfully in a real environment. Limited deployments, first revenues. | Mention of "first commercial deployment," "early revenue," "limited roll-out." |
| **7.0-8.0** | Proven at Scale (TRL 8): Multiple commercial installations, robust operational data, proven reliability. | Mention of "multiple installations," "years in operation," specific MW/GW deployed. |
| **9.0-10.0** | Mass Deployment (TRL 9): Industry standard, high volume, multi-country deployment, significant market share. | Mention of "mass production," "industry standard," "millions of units sold." |

---

### 2. **Technical Performance** [Weight: 15%]
*Measures real-world function: Does it work reliably and efficiently compared to the baseline?*

| Scale | Criteria | Evidence Focus |
| :--- | :--- | :--- |
| **0.0-2.0** | No real-world data or failed deployment. Claims without evidence. | No data, or article details a failure/shutdown. |
| **3.0-4.0** | Works in pilots but inconsistent. Limited data, below manufacturer expectations. | Vague data, mention of "technical glitches," "intermittent." |
| **5.0-6.0** | Meets expectations. Real-world matches projections; acceptable metrics (e.g., 80% uptime). | Cites a specific performance metric (e.g., 15% efficiency, 80% uptime). |
| **7.0-8.0** | Exceeds expectations. Outperforms projections; robust track record (e.g., >95% uptime, proven durability). | Specific, high metrics; mention of "outperforming specs," "reliable track record." |
| **9.0-10.0** | Outperforms alternatives. Better than all fossil/incumbent alternatives on core function. | Explicit comparison showing clear technical superiority over the market leader. |

---

### 3. **Economic Competitiveness (LCC)** [Weight: 20%]
*Measures long-term financial viability: Is the Life Cycle Cost (LCC) competitive?*

| Scale | Criteria | Evidence Focus |
| :--- | :--- | :--- |
| **0.0-2.0** | Much more expensive (>3x fossil baseline) and no clear path to cost reduction. | Mention of "high subsidy required," "prohibitively expensive." |
| **3.0-4.0** | 2-3x expensive, but clear declining cost trajectory; still heavily relies on subsidies. | Mention of "cost trajectory improving," "needs government support." |
| **5.0-6.0** | Approaching parity. Within 50%-100% of fossil LCOE; subsidies phase out. | Specific cost range (e.g., LCOE of $120/MWh), "approaching parity." |
| **7.0-8.0** | Cost-competitive. LCOE parity or lower than fossil/alternative baseline; requires zero operational subsidy. | Clear LCOE figure that is competitive; mention of "grid parity achieved." |
| **9.0-10.0** | Cheaper than alternatives. Lowest cost energy/product source in the market; demonstrated cost reductions (>50% in 5 years). | Explicit claim of being the "cheapest option" or "new low-cost leader." |

---

### 4. **Life Cycle Environmental Impact** [Weight: 30%]
*Measures holistic environmental effects: Reduces $CO_2$ but manages trade-offs (Waste, Resources)?*

| Scale | Criteria | Evidence Focus |
| :--- | :--- | :--- |
| **0.0-2.0** | Creates severe trade-offs. Significant reliance on high-impact resources (e.g., conflict minerals); generates unmanageable toxic waste. | Mention of "hazardous waste," "toxic disposal problem," "resource scarcity risk." |
| **3.0-4.0** | Focuses only on $CO_2$. Claims GHG reduction but ignores resource depletion, water use, or end-of-life recycling challenges. | Specific $CO_2$ claim but no mention of circularity or material inputs. |
| **5.0-6.0** | Addresses key trade-offs. Claims GHG reduction and has a plausible plan/design for circularity (e.g., 50% recyclable). | Mention of "design for recycling," "lower water intensity," "responsible sourcing." |
| **7.0-8.0** | Proven LCE benefits. Quantified benefits across multiple metrics (GHG, water, waste) and life-cycle phases; high recyclability (>80%). | Cites figures for $CO_2$ *and* resource/waste reduction; mentions **Life Cycle Assessment (LCA)**. |
| **9.0-10.0** | System-level net positive/circular. Fully closed-loop material cycles or proven net-negative impact (GHG removal, water replenishment) over its life. | Claim of "fully recyclable," "net negative emissions," or "zero landfill waste." |

---

### 5. **Social & Equity Impact** [Weight: 10%]
*Measures human and community effects: Ethical sourcing, job creation, and equitable access.*

| Scale | Criteria | Evidence Focus |
| :--- | :--- | :--- |
| **0.0-2.0** | High risk of controversy. Major social risks in the supply chain (e.g., forced labor, child labor) or causes community harm (e.g., displacement). | Mention of "controversy," "labor issues," or "local protests." |
| **3.0-4.0** | Neutral, but passive. No mention of social impact, good or bad; assumes basic compliance; accessibility is high-cost. | Silent on social issues; only focuses on corporate profit/technology. |
| **5.0-6.0** | Explicitly addresses workers. Clear job creation claims (quantitative) and adherence to local labor laws. | Cites "new job creation" figures, "training programs." |
| **7.0-8.0** | Focus on community and equity. Improves quality of life for the local community *and* is designed for equitable access (affordable to all income levels). | Mentions "community engagement," "public health benefits," or "accessible pricing model." |
| **9.0-10.0** | Ethical supply chain leader. Fully transparent, certified ethical supply chain, creates high-quality *local* jobs, and actively addresses energy/resource poverty. | Mention of third-party ethical audit/certification, or poverty reduction goals. |

---

### 6. **Governance & Systemic Impact** [Weight: 10%]
*Measures institutional readiness, ethical challenges, and the potential for positive systemic disruption.*

| Scale | Criteria | Evidence Focus |
| :--- | :--- | :--- |
| **0.0-2.0** | Governance/Ethical Risk. Creates major regulatory conflicts (e.g., privacy, monopoly) or has severe, unaddressed ethical risks. | Mention of "regulatory uncertainty," "ethical debate," or "legal challenges." |
| **3.0-4.0** | System Dependent. Technology is centralized and requires heavy institutional support/monopoly; no change to system structure. | Mention of "large utility contracts," "government mandate," or "single supplier." |
| **5.0-6.0** | Neutral/Policy Fit. Technology fits neatly within existing regulations and governance structures; low friction, low disruption. | Mention of "easy adoption by existing companies," "standardized process." |
| **7.0-8.0** | Positive Governance. Actively promotes positive policy change (e.g., standardizing sustainable practice) or is transparent and verifiable. | Mention of "influencing new standards," "highly auditable supply chain," or "open source." |
| **9.0-10.0** | Systemic Disruption. Technology drives fundamental, positive, and resilient structural change (e.g., radical decentralization, enhanced democratic access to energy/resources). | Mention of "distributed generation," "empowering consumers," or "breaking market concentration." |

---

## 2. Contrastive Examples (Calibration Guide)

| Technology | TRL | Performance | Economics | **Environment** | **Social** | **Governance** |
| :--- | :--- | :--- | :--- | :--- | :--- | :--- |
| **1. Modern Utility Solar (2020)** | **9.0** | **7.0** | **9.0** | **7.0** | **7.0** | **8.0** |
| **2. Early Solar (2005)** | **8.0** | **6.0** | **3.0** | **7.0** | **4.0** | **7.0** |
| **3. Advanced Nuclear (2024)** | **7.0** | **9.0** | **4.0** | **2.0** | **5.0** | **3.0** |
| **4. Perovskite Solar (2024)** | **4.0** | **8.0** | **0.0** | **5.0** | **2.0** | **5.0** |
| **5. New, Centralized CCUS** | **6.0** | **7.0** | **6.0** | **8.0** | **4.0** | **2.0** |
| **6. Biofuel from Food Crops** | **8.0** | **5.0** | **6.0** | **3.0** | **1.0** | **4.0** |
| **7. Geoengineering (Hypothetical)** | **2.0** | **0.0** | **0.0** | **9.0** | **0.0** | **1.0** |
| **8. Tech w/ Forced Labor in Supply Chain** | **7.0** | **7.0** | **8.0** | **4.0** | **0.0** | **4.0** |
| **9. Coal Power Plant (Legacy Tech)** | **9.0** | **8.0** | **7.0** | **0.0** | **5.0** | **3.0** |

---

## 3. Output Format and Instructions

1.  **Read the article summary (INPUT DATA) carefully.**
2.  **Score each of the 6 dimensions independently** using **half-point increments only** (e.g., 6.0, 6.5, 7.0, etc.) from **0.0 to 10.0**.
3.  **Provide a concise, specific piece of evidence (a quote or direct inference)** from the article summary to justify the score. If no data exists for a dimension, the score should be low (e.g., 0.0-2.0).
4.  **Output ONLY a single JSON object** that strictly adheres to the schema below.

```json
{
  "technology_readiness_level": {
    "score": 0.0,
    "evidence": ""
  },
  "technical_performance": {
    "score": 0.0,
    "evidence": ""
  },
  "economic_competitiveness": {
    "score": 0.0,
    "evidence": ""
  },
  "life_cycle_environmental_impact": {
    "score": 0.0,
    "evidence": ""
  },
  "social_equity_impact": {
    "score": 0.0,
    "evidence": ""
  },
  "governance_systemic_impact": {
    "score": 0.0,
    "evidence": ""
  }
}